--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <nav id="menu">
         <ul class="links">
             <li>
-                <a href="index.html">Home</a>
+                <a href="./">Home</a>
             </li>
             <li>
-                <a href="commands/">Commands</a>
+                <a href="commands">Commands</a>
             </li>
             <li>
                 <a href="#">Item 3</a>
@@ -49,10 +49,6 @@
         <!-- One -->
         <section class="wrapper style1">
             <div class="inner">
-                <header class="align-center">
-                    <h2>Nam eu nisi non ante sodale</h2>
-                    <p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
-                </header>
                 <div class="flex flex-2">
                     <div class="video col col1">
                         <div class="image round fit">
@@ -70,8 +66,10 @@
                             permissions so everything works. Minimal invite is configuarable and only includes the permissions
                             neccessary for normal functions.
                         </p>
-                        <a href="https://discordapp.com/api/oauth2/authorize?client_id=412388205229506560&permissions=8&scope=bot" rel="noopener noreferrer" target="_blank" class="button icon fa-check">Full Invite</a>
-                        <a href="https://discordapp.com/api/oauth2/authorize?client_id=412388205229506560&permissions=805694647&scope=bot" rel="noopener noreferrer" target="_blank" class="button icon fa-check">Minimal Invite</a>
+                        <a href="https://discordapp.com/api/oauth2/authorize?client_id=412388205229506560&permissions=8&scope=bot" rel="noopener noreferrer"
+                            target="_blank" class="button icon fa-check">Full Invite</a>
+                        <a href="https://discordapp.com/api/oauth2/authorize?client_id=412388205229506560&permissions=805694647&scope=bot" rel="noopener noreferrer"
+                            target="_blank" class="button icon fa-check">Minimal Invite</a>
                     </div>
                 </div>
             </div>
@@ -103,10 +101,19 @@
             <div class="inner">
                 <div class="copyright">
                     <ul class="icons">
-                        <li><a href="https://github.com/vic485/hifumi" class="icon fa-github"><span class="label">GitHub</span></a></li>
-                        <li><a href="https://twitter.com/thevic485" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li>
+                            <a href="https://github.com/vic485/hifumi" class="icon fa-github">
+                                <span class="label">GitHub</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/thevic485" class="icon fa-twitter">
+                                <span class="label">Twitter</span>
+                            </a>
+                        </li>
                     </ul>
-                    &copy; vic485. Design <a href="https://templated.co">TEMPLATED</a>.
+                    &copy; vic485. Design
+                    <a href="https://templated.co">TEMPLATED</a>.
                 </div>
             </div>
         </footer>
