--- a/commands.html
+++ b/commands.html
@@ -44,14 +44,38 @@
 					<h2>Hifumi Command Listing</h2>
 					<p>List of commands and standard usage.
 						<br>&LeftAngleBracket; &RightAngleBracket; denotes required parameter, [ ] denotes optional parameter</p>
+					<a href="#admin" class="button special scrolly">Admin Commands</a>
+					<a href="#fun" class="button special scrolly">Fun Commands</a>
+					<a href="#game" class="button special scrolly">Game Commands</a>
+					<a href="#general" class="button special scrolly">General Commands</a>
 					<a href="#help" class="button special scrolly">Help Commands</a>
+					<a href="#mod" class="button special scrolly">Mod Commands</a>
+					<a href="#nsfw" class="button special scrolly">NSFW Commands</a>
+					<a href="#search" class="button special scrolly">Search Commands</a>
+					<a href="#tag" class="button special scrolly">Tag Commands</a>
 				</header>
 			</div>
 		</section>
 
-		<section class="wrapper style2" id="help">
+		<section class="wrapper">
 			<div class="inner">
-				<h3 class="align-center">Help Commands</h3>
+				<h3 class="align-center" id="admin">Administrator Commands</h3>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="fun">Fun Commands</h3>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="game">Game Commands</h3>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="general">General Commands</h3>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="help">Help Commands</h3>
 				<h3>h!help</h3>
 				<p>Shows all of the commands.</p>
 				<br>
@@ -60,6 +84,22 @@
 				<p>Usage:
 					<code>h!info &LeftAngleBracket;command name&RightAngleBracket;</code>
 				</p>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="mod">Moderator Commands</h3>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="nsfw">NSFW Commands</h3>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="search">Search Commands</h3>
+				<a href="#main" class="button alt scrolly">Return to top</a>
+
+				<hr class="major" />
+				<h3 class="align-center" id="tag">Tag Commands</h3>
 				<a href="#main" class="button alt scrolly">Return to top</a>
 			</div>
 		</section>
