Style and link fixes

--- a/commands.html
+++ b/commands.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Urban by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 
 <head>
@@ -64,6 +59,17 @@
 
 				<hr class="major" />
 				<h3 class="align-center" id="fun">Fun Commands</h3>
+				<h4>h!clap</h4>
+				<p>Adds claps to the spaces in your sentence</p>
+				<p>Usage:
+					<code>h!clap &LeftAngleBracket;sentence&RightAngleBracket;</code>
+				</p>
+				<br>
+				<h4>h!clapd</h4>
+				<p>Adds claps to the spaces in your sentence, and deletes your message</p>
+				<p>Usage:
+					<code>h!clapd &LeftAngleBracket;sentence&RightAngleBracket;</code>
+				</p>
 				<a href="#main" class="button alt scrolly">Return to top</a>
 
 				<hr class="major" />
@@ -76,14 +82,17 @@
 
 				<hr class="major" />
 				<h3 class="align-center" id="help">Help Commands</h3>
-				<h3>h!help</h3>
+				<h4>h!help</h4>
 				<p>Shows all of the commands.</p>
 				<br>
-				<h3>h!info</h3>
+				<h4>h!info</h4>
 				<p>Shows details on a command's usage.</p>
 				<p>Usage:
 					<code>h!info &LeftAngleBracket;command name&RightAngleBracket;</code>
 				</p>
+				<br>
+				<h4>h!support</h4>
+				<p>Provides a link to Hifumi's support server</p>
 				<a href="#main" class="button alt scrolly">Return to top</a>
 
 				<hr class="major" />
@@ -106,7 +115,7 @@
 
 		<footer id="footer">
 			<div class="inner">
-				<div class="icons">
+				<div class="copyright">
 					<ul class="icons">
 						<li>
 							<a href="https://github.com/vic485/hifumi" class="icon fa-github">
