--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <h1>
-            <a href="#">Hifumi |
+            <a href="./">Hifumi |
                 <span>ひふみ</span>
             </a>
         </h1>
@@ -44,9 +44,7 @@
         </div>
     </section>
 
-    <!-- Main -->
     <div id="main">
-        <!-- One -->
         <section class="wrapper style1">
             <div class="inner">
                 <div class="flex flex-2">
