Reflect recent commit on master
Steam and Wows commands, about page started, and some syntax fixes

--- a/commands.html
+++ b/commands.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="shortcut icon" href="images/favicon.png">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 				<a href="commands">Commands</a>
 			</li>
 			<li>
-				<a href="#">Item 3</a>
+				<a href="about">About</a>
 			</li>
 		</ul>
 	</nav>
@@ -74,6 +75,14 @@
 
 				<hr class="major" />
 				<h3 class="align-center" id="game">Game Commands</h3>
+				<h4>h!steam</h4>
+				<p>Shows a user's Steam profile.</p>
+				<p>Usage:
+					<code>h!steam &LeftAngleBracket;user id&RightAngleBracket;</code>
+				</p>
+				<br>
+				<h4>h!wows</h4>
+				<p>Usage: Enter a number from the menu that shows up, and provide a username after.</p>
 				<a href="#main" class="button alt scrolly">Return to top</a>
 
 				<hr class="major" />
@@ -128,7 +137,7 @@
 							</a>
 						</li>
 					</ul>
-					&copy; vic485. Design
+					&copy; vic485. Design:
 					<a href="https://templated.co">TEMPLATED</a>.
 				</div>
 			</div>
