--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="commands">Commands</a>
             </li>
             <li>
-                <a href="#">Item 3</a>
+                <a href="about">About</a>
             </li>
         </ul>
     </nav>
@@ -110,7 +110,7 @@
                             </a>
                         </li>
                     </ul>
-                    &copy; vic485. Design
+                    &copy; vic485. Design:
                     <a href="https://templated.co">TEMPLATED</a>.
                 </div>
             </div>
