--- a/commands.html
+++ b/commands.html
@@ -40,6 +40,10 @@
 					<h2>Hifumi Command Listing</h2>
 					<p>List of commands and standard usage.
 						<br>&LeftAngleBracket; &RightAngleBracket; denotes required parameter, [ ] denotes optional parameter</p>
+					<br>
+					<h3>!!!NOTE!!!</h3>
+					<p>This page reflects the commands of the in-progress rewrite of Hifumi. Some commands may not be
+						accurate or available in the current public version.</p>
 					<a href="#admin" class="button special scrolly">Admin Commands</a>
 					<a href="#fun" class="button special scrolly">Fun Commands</a>
 					<a href="#game" class="button special scrolly">Game Commands</a>
