--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
                         <p>Still need help? You can join the support server throught the link below, and ask questions. Get
                             help and meet other people in our community support server.</p>
-                        <a href="https://discord.gg/jqpcmev" rel="noopener noreferrer" target="_blank" class="button">Support Server</a>
+                        <a href="https://discord.gg/jqpcmev" rel="noopener noreferrer" target="_blank" class="button fab fa-discord"> Support Server</a>
                     </div>
                     <div class="col col1 video">
                         <div class="image round fit">
